fix hq-help style to work nicely in both left- and right-aligned text

--- a/hqstyle/_less/core/icons.less
+++ b/hqstyle/_less/core/icons.less
@@ -46,22 +46,21 @@ th.header > div {
 .hq-help {
     position: relative;
     overflow: visible;
-    padding-right: 25px;
-
+    width: 0px;
+    line-height: 25px;
+    margin: 0 3px;
     i {
         font-size: 20px;
-        line-height: 25px;
-        width:25px;
-        text-decoration:none;
+        text-decoration: none;
         position: absolute;
-        top: -30%;
-        left: @gridGutterWidth/3;
+        bottom: -3px;
     }
     &:hover i,
     &.on i {
         font-size: 30px;
-        text-decoration:none;
-        left: @gridGutterWidth/3-2px;
+        text-decoration: none;
+        bottom: -8px;
+        left: -5px;
         color: @green;
     }
     .popover {
